aya-cli/src/config/snapshots/aya_cli__config__lexer__tests__sprite_array.snap
---
source: aya-cli/src/config/lexer.rs
expression: tokens
---
[
    Token {
        offset: ByteOffset {
            start: 13,
            end: 17,
        },
        kind: Ident,
    },
    Token {
        offset: ByteOffset {
            start: 19,
            end: 20,
        },
        kind: Equal,
    },
    Token {
        offset: ByteOffset {
            start: 21,
            end: 29,
        },
        kind: String,
    },
    Token {
        offset: ByteOffset {
            start: 43,
            end: 50,
        },
        kind: Ident,
    },
    Token {
        offset: ByteOffset {
            start: 52,
            end: 53,
        },
        kind: Equal,
    },
    Token {
        offset: ByteOffset {
            start: 54,
            end: 55,
        },
        kind: LeftBracket,
    },
    Token {
        offset: ByteOffset {
            start: 72,
            end: 85,
        },
        kind: String,
    },
    Token {
        offset: ByteOffset {
            start: 87,
            end: 88,
        },
        kind: Comma,
    },
    Token {
        offset: ByteOffset {
            start: 105,
            end: 118,
        },
        kind: String,
    },
    Token {
        offset: ByteOffset {
            start: 120,
            end: 121,
        },
        kind: Comma,
    },
    Token {
        offset: ByteOffset {
            start: 138,
            end: 151,
        },
        kind: String,
    },
    Token {
        offset: ByteOffset {
            start: 153,
            end: 154,
        },
        kind: Comma,
    },
    Token {
        offset: ByteOffset {
            start: 167,
            end: 168,
        },
        kind: RightBracket,
    },
]
